# mystd

./: .gitignore  .gitmodules  CMakeLists.txt
.cache/clangd/index/: exception.cpp.7C912B3788556975.idx  exception.h.3EA17E2EC8B91718.idx  main.cpp.B3B9F778E9032261.idx  vector.cpp.D87F7A7BE4C5F795.idx  vector.h.D1A6260F1331C32B.idx
.github/workflows/: ci.yml  full-ci.yml
lib/: CMakeLists.txt  bit.hpp  deque.hpp  exception.cpp  exception.h  exception.hpp  file_helper.cpp  file_helper.hpp  inf_exception.hpp  parser.cpp  parser.hpp  queue.hpp  reverse_iterator_a.hpp  string.cpp  string.hpp  vector.h  vector.hpp
lib/Trash/: README.md
lib/Trash/containers/: deque.hpp  queue.hpp  string.cpp  vector.hpp
lib/Trash/maths/: IntN_t.hpp  UintN_t.hpp  mystdtype.hpp
lib/algo/graph/: topsort.hpp
lib/algo/string/: Z-function.hpp
lib/allocators/: linear_allocatorc.hpp  pool_allocator.hpp
lib/containers/: bor.hpp  deque.hpp  queue.hpp  vector.hpp
lib/exception/: inf_exception.hpp
lib/file_manager/: dir_file.cpp  dir_file.hpp  file.cpp  file.hpp  regular_file.cpp  regular_file.hpp
lib/file_manager/formats/: file_log.hpp  file_sav.cpp  file_sav.hpp  file_sche.cpp  file_sche.hpp  file_txt.cpp  file_txt.hpp  formats.hpp
lib/loggers/: logger.cpp  logger.hpp
lib/maths/: UintN_t.hpp  mystdint.hpp
lib/parsers/: arg.parser.hpp  arg_parser.cpp  arg_parser.hpp
lib/properties/: counter.hpp  intrusive_ptr_counter.hpp
lib/ptr/: intrusive_ptr.hpp  scoped_ptr.hpp
lib/time/: time.cpp  time.hpp
lib/trash/: deque.hpp  vector.hpp
tests/: CMakeLists.txt  arg_parser_test.cpp  bit_test.cpp  bor_test.cpp  logger_test.cpp  main.cpp  parser_tests.cpp  vector_tests.cpp
